[gd_scene load_steps=6 format=3 uid="uid://csoi24pi2yds"]

[ext_resource type="Script" path="res://scripts/artillery.gd" id="1_ng6rb"]
[ext_resource type="Texture2D" uid="uid://th0oddb0r1km" path="res://sprites/ArtilleryBase.png" id="1_rihi0"]
[ext_resource type="Texture2D" uid="uid://c0bhwp402a3xc" path="res://sprites/ArtilleryCannon.png" id="2_bcdv1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tv3r1"]
size = Vector2(47, 36)

[sub_resource type="CircleShape2D" id="CircleShape2D_pi0dk"]
radius = 719.136

[node name="Artillery" type="Area2D"]
script = ExtResource("1_ng6rb")

[node name="ArtilleryBase" type="Sprite2D" parent="."]
texture = ExtResource("1_rihi0")

[node name="ArtilleryCannon" type="Node2D" parent="."]
position = Vector2(0, 58.815)

[node name="Sprite2D2" type="Sprite2D" parent="ArtilleryCannon"]
position = Vector2(0, -61.815)
texture = ExtResource("2_bcdv1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 41)
shape = SubResource("RectangleShape2D_tv3r1")

[node name="AttackRange" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRange"]
shape = SubResource("CircleShape2D_pi0dk")

[node name="FireCooldown" type="Timer" parent="."]
wait_time = 0.3

[connection signal="body_entered" from="AttackRange" to="." method="_on_attack_range_body_entered"]
[connection signal="body_exited" from="AttackRange" to="." method="_on_attack_range_body_exited"]
